--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -4,50 +4,57 @@ on:
     branches:
       - main
       - master
+env:
+  SITE_FOLDER: "."
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        persist-credentials: false
-    # NOTE: Python is necessary for the pre-rendering (minification) step
-    - name: Install python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-    # NOTE: Here you can install dependencies such as matplotlib if you use
-    # packages such as PyPlot.
-    - run: pip install matplotlib
-    - name: Install Julia
-      uses: julia-actions/setup-julia@v1
-      with:
-        version: 1.6
-    # NOTE
-    #   The steps below ensure that NodeJS and Franklin are loaded then it
-    #   installs highlight.js which is needed for the prerendering step
-    #   (code highlighting + katex prerendering).
-    #   Then the environment is activated and instantiated to install all
-    #   Julia packages which may be required to successfully build your site.
-    #   The last line should be `optimize()` though you may want to give it
-    #   specific arguments, see the documentation or ?optimize in the REPL.
-    - run: julia -e '
-            using Pkg; Pkg.activate("."); Pkg.instantiate();
-            using NodeJS; run(`$(npm_cmd()) install highlight.js purgecss`);
-            import Pkg; Pkg.add("DataFrames");
-            import Pkg; Pkg.add("PyPlot");
-            Pkg.add(Pkg.PackageSpec(name="Franklin", rev="master"));
-            using Franklin;
-            optimize();
-            io = IOBuffer();
-            run(pipeline(`$(NodeJS.npm_cmd()) root`, stdout=io));
-            nodepath = String(take!(io));
-            run(`bash -c "$(strip(nodepath))/purgecss/bin/purgecss.js --css __site/css/bootstrap.min.css --content __site/index.html __site/about/*.html __site/tags/*.html __site/posts/**/*.html  --output __site/css/bootstrap.min.css"`);
-            '
-    - name: Build and Deploy
-      uses: JamesIves/github-pages-deploy-action@releases/v3
-      with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: __site
+      - name: Git checkout
+        uses: actions/checkout@v2
+
+      - name: Cache
+        uses: actions/cache@v2
+        with:
+          path: |
+                docs/__cache
+                ~/.julia/artifacts
+                ~/.julia/packages
+                ~/.cache/pip
+          key: ${{ runner.os }}-franklin-cache-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-franklin-cache-
+
+      # # Python
+      # - name: Install python
+      #   uses: actions/setup-python@v2
+      #   with:
+      #     python-version: 3.8
+      # - run: pip install numpy matplotlib
+
+      # Julia
+      - name: Install Julia
+        uses: julia-actions/setup-julia@v1
+        with:
+          version: 1.7
+
+      # - name: Binary dependencies for Makie
+      #   run: sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev
+      #
+      # >
+      #     DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24'
+
+      # Website build
+      - run: julia -e '
+                using Pkg;
+                Pkg.add(url="https://github.com/tlienart/Xranklin.jl", rev="main");
+                using Xranklin;
+                build("${{ env.SITE_FOLDER }}");'
+
+      # Deployment and caching
+      - run: touch ${{ env.SITE_FOLDER }}/__site/.nojekyll
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@releases/v4
+        with:
+          BRANCH: gh-pages
+          FOLDER: ${{ env.SITE_FOLDER }}/__site
